# OpenPulseAI

./: .gitignore  CLAUDE.md  LICENSE  README.md  TODO.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/: settings.local.json
docs/: CONTRIBUTING-COLLECTORS.md  bootstrap.md  desktop-testing-checklist.md  setup.md
docs/superpowers/plans/: 2026-04-03-connector-proxy-system.md  2026-04-04-byom-model-picker.md  2026-04-04-skills-system.md  2026-04-04-tauri-desktop-wrapper.md  2026-04-05-scheduler-orchestrator.md  2026-04-12-wiki-style-dream-pipeline.md  2026-04-14-confluence-space-picker.md  2026-04-17-wiki-maturity-v2.md
docs/superpowers/specs/: 2026-04-03-connector-proxy-system.md  2026-04-04-byom-model-picker.md  2026-04-04-skills-system-design.md  2026-04-04-tauri-desktop-wrapper.md  2026-04-05-scheduler-orchestrator.md  2026-04-12-wiki-style-dream-pipeline.md  2026-04-14-confluence-skill-design.md  2026-04-14-confluence-space-picker-design.md  2026-04-17-wiki-maturity-v2-design.md
scripts/: build-desktop.sh  build-sea.sh  build-sidecar-ui.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  discovery.rs  main.rs  server_sidecar.rs  sidecar.rs  skills.rs  tray.rs  vault.rs
